Fixed margin between projects on mobile

--- a/style.css
+++ b/style.css
@@ -981,5 +981,8 @@ footer {
     margin: 0px;
 
   }
+  .project{
+    margin-bottom: 100px;
+  }
   }
 }
